[CCXDEV-8579] Make /info endpoint public (no auth) (#908)
* remove unused file

* add info endpoint to v2 api

* remove authentication for the info endpoint

* add unit tests
